# SimpleVoiceChat

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  cmake-ubuntu-platform.yml  cmake-windows-platform.yml
Common/Messages/: AudioMessage.h  MessageTypes.h  SetChannelMessage.h  SetTopicMessage.h
VoiceChatClient/: AudioTools.cpp  AudioTools.h  CMakeLists.txt  ConcurrentBag.hpp  Headers.h  Message.h  SocketClient.cpp  SocketClient.h  Utils.h  main.cpp  vcpkg.json
VoiceChatClient/Documents/: ConcurrencyDiagram.puml
VoiceChatClient/Messages/: AudioMessage.h  MessageTypes.h  SetTopicMessage.h
VoiceChatClient/VoiceChatClient.xcodeproj/: project.pbxproj
VoiceChatServer/: CMakeLists.txt  MessageType.h  Server.cpp  Server.h  main.cpp  main2.cpp  vcpkg.json
VoiceChatServer/VoiceChatServer.xcodeproj/: project.pbxproj
